--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<head>
-		
-	</head>
-	<body>
-		<h1>Well Hello There, stranger!</h1>
-	</body>
+
+<head>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/animations.js"></script>
+    <script src="js/onload.js"></script>
+</head>
+
+<body>
+    <center class="centered">
+        <img src="./img/logo.png" id="mainLogo" class="logo" />
+    </center>
+    <center class="centered">
+        <div id="mainLogoAltText">
+            <h1>TechWorldInc</h1>
+            <p>electronic enthusiast</p>
+        </div>
+
+    </center>
+
+    <center class="centered">
+        <div class="linkPane" id="navText">
+            | <a href="./projects/index.html">PROJECTS</a> | <a href="./languages/index.html">LANGUAGES</a> | <a href="./about/index.html">ABOUT</a> | <a href="./contact/index.html">CONTACT</a> |
+        </div>
+    </center>
+</body>
+
+
 </html>
