--- a/404.html
+++ b/404.html
@@ -3,26 +3,14 @@
 
 <head>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/animations.js"></script>
-    <script src="js/onload.js"></script>
 </head>
 
 <body>
     <center class="centered">
-        <img src="./img/logo.png" id="mainLogo" class="logo" />
-    </center>
-    <center class="centered">
-        <div id="mainLogoAltText">
-            <h1>Error</h1>
-            <p>Page Not Found!</p>
-        </div>
+        <h1>Error 404</h1>
+        <p>Unable to locate the requested page.</p>
 
-    </center>
-
-    <center class="centered">
-        <div class="linkPane" id="navText">
-            | <a href="/">HOME</a> |
-        </div>
+        <a href="/">Go Home</a>
     </center>
 </body>
 
