--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
         <h1>Error 404</h1>
         <p>Unable to locate the requested page.</p>
 
-        <a href="/">Go Home</a>
+        <a href="/">Home</a>
     </center>
 </body>
 
