TechWorldInc.tk update

--- a/projects/index.html
+++ b/projects/index.html
@@ -15,7 +15,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-
+    <script src="/projects/details/assets/details.js"></script>
 </head>
 
 <body>
@@ -28,35 +28,8 @@
     </div>
     <div class="pageContent">
         <p>I have worked on a lot of projects in the past, and thus I won't waste your time explaining every single little one, but some of the bigger ones are below:</p>
-        <span>
-            <button class="projectDisplay"><img src="../img/WebOSDesktop.png">
-                <div class="info">
-                    <b>WebOSv3</b>
-                    <br>
-                    <i style="opacity:0.5">OS in Electron</i>
-                </div>
-            </button>
-            <button class="projectDisplay"><img src="../img/TWIx86.png">
-                <div class="info">
-                    <b>TWIx86</b>
-                    <br>
-                    <i style="opacity:0.5">OS built with COSMOS</i>
-                </div>
-            </button>
-            <button class="projectDisplay"><img src="../img/Coin Collector.png">
-                <div class="info">
-                    <b>Coin Collector</b>
-                    <br>
-                    <i style="opacity:0.5">Cookie Clicker Ripoff</i>
-                </div>
-            </button>
-            <button class="projectDisplay"><img src="../img/hangman.png">
-                <div class="info">
-                    <b>Hangman</b>
-                    <br>
-                    <i style="opacity:0.5">Digital Hangman</i>
-                </div>
-            </button>
+        <span id="projectsSpan">
+            
         </span>
 
     </div>
