--- a/twims/index.html
+++ b/twims/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <script>
         let URLPrefix = "30da-77-164-24-60";
         let errorPrefix = `Tunnel ${URLPrefix}.ngrok.io not found\n\nERR_NGROK_3200`;
