Upload updated version to website

--- a/countdown/index.html
+++ b/countdown/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div class="top-bar"><a href="https://www.techworldinc.tk/" title="TechWorldInc"><img src="./logo.png" height="40px">TechWorldInc</a></div>
     <div class="content">
         <span class="dateDisplay">
             <span id="dateOut">--- --, ---- --:--:--</span>
@@ -26,7 +27,8 @@
         <span class="digit" id="minOut">--</span>
         <span class="digit colon">:</span>
         <span class="digit" id="secOut">--</span>
-        <p class="dateDisplay">Less than <span id="weekOut">--</span> Weeks</p>
+        <p class="dateDisplay noMarginBottom">Less than <span id="weekOut">--</span> Weeks</p>
+        <p class="dateDisplay noMargin"><span id="secondsOut">-----------</span>ms Remain</p>
     </div>
 </body>
 
