--- a/404.html
+++ b/404.html
@@ -1,25 +1,3 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-</head>
-
-<body>
-    <center class="centered">
-        <h1>Error 404</h1>
-        <p>Unable to locate the requested page.</p>
-
-        <a href="/">Go Home</a>
-    </center>
-</body>
-
-
-</html>
+<script>
+    window.location.href = "/";
+</script>
