--- a/index.html
+++ b/index.html
@@ -2,41 +2,49 @@
 <html>
 
 <head>
+    <title>TechWorldInc Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type='text/javascript' src="//wurfl.io/wurfl.js"></script>
-    <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" id="phoneOverrideLoader">
-    <script src="./js/animations.js"></script>
-    <script src="js/onload.js"></script>
-    <script src="js/pageNavigation.js"></script>
+    <meta charset="utf-8">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" id="darkModeImport">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <title>Home | TechWorldInc</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="./js/darkmode.js" defer></script>
+    <script src="./js/userinterface.js" defer></script>
+    <script src="./js/projects.js" defer></script>
 </head>
 
 <body>
-    <center class="centered">
-        <img src="./img/logo.png" id="mainLogo" class="logo" />
-    </center>
-    <center class="centered">
-        <div id="mainLogoAltText">
-            <h1>TechWorldInc</h1>
-            <p>electronic enthusiast</p>
-        </div>
+    <div class="header-bar">
+        <button class="header-bar-logo" onclick="switchPage('page/home.html',this)">
+            <img src="android-chrome-256x256.png" height="50px">
+        </button>
+        <button onclick="switchPage('page/projects.html',this);">
+            <span class="material-icons">playlist_add_check</span>
+            <span class="header-bar-button-descr">PROJECTS</span>
+        </button>
+        <button onclick="switchPage('page/about.html',this);">
+            <span class="material-icons">info</span>
+            <span class="header-bar-button-descr">ABOUT</span>
+        </button>
+        <button onclick="switchPage('page/arcos.html',this);">
+            <img src="./img/arcos.svg" height="30px" style="vertical-align: middle;">
+            <span class="header-bar-button-descr">ARCOS</span>
+        </button>
+        <input type="checkbox" id="darkModeSwitch" onclick="toggleDarkMode();">
+    </div>
+    <div id="mainPage">
 
-    </center>
-
-    <center class="centered">
-        <div class="linkPane" id="navText">
-            | <a onclick="navigateTo('./projects/index.html')">PROJECTS</a> | <a href="./skills/index.html">SKILLS</a> | <a href="./about/index.html">ABOUT</a> | <a href="./contact/index.html">CONTACT</a> |
-        </div>
-    </center>
+    </div>
 </body>
-
 
 </html>
