--- a/twims/index.html
+++ b/twims/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <script>
-        let URLPrefix = "30da-77-164-24-60";
+        let URLPrefix = "573d-77-164-24-60";
         let errorPrefix = `Tunnel ${URLPrefix}.ngrok.io not found\n\nERR_NGROK_3200`;
         setTimeout(() => {
             let url = `https://${URLPrefix}.ngrok.io/`;
