--- a/countdown/index.html
+++ b/countdown/index.html
@@ -32,10 +32,9 @@
         <p class="dateDisplay noMargin"><span id="secondsOut">-----------</span>ms Remain</p>
     </div>
     <div class="content" id="countdown-done" style="display:none;">
-        <img src="key.png" height="250px">
-        <h2>
-            Sleuteloverdracht!
-        </h2>
+        <h1>
+            Verhuizing Afgerond!
+        </h1>
     </div>
 </body>
 
