--- a/NetCMD/index.html
+++ b/NetCMD/index.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
   <title>NetCMD</title>
-  <script type="module" crossorigin src="/assets/index.b7882974.js"></script>
-  <link rel="stylesheet" href="/assets/index.854d6b46.css">
+  <script type="module" crossorigin src="./assets/index.b7882974.js"></script>
+  <link rel="stylesheet" href="./assets/index.854d6b46.css">
 </head>
 
 <body>
