--- a/vTDx/index.html
+++ b/vTDx/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vTDx/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,8 +15,8 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vTDx</title>
-    <script type="module" crossorigin src="/vTDx/assets/index.16673f1a.js"></script>
-    <link rel="stylesheet" href="/vTDx/assets/index.11aba48b.css">
+    <script type="module" crossorigin src="/assets/index.cb0c7e8b.js"></script>
+    <link rel="stylesheet" href="/assets/index.2847581f.css">
   </head>
 
   <body class="sidebar-collapsed">
