Upload new vTDx

--- a/NetCMD/index.html
+++ b/NetCMD/index.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
   <title>NetCMD</title>
-  <script type="module" crossorigin src="./assets/index.fd4515c4.js"></script>
-  <link rel="stylesheet" href="./assets/index.093d2661.css">
+  <script type="module" crossorigin src="./vTDx/assets/index.fd4515c4.js"></script>
+  <link rel="stylesheet" href="./vTDx/assets/index.093d2661.css">
 </head>
 
 <body>
