Upload new vTDx

--- a/vTDx/index.html
+++ b/vTDx/index.html
@@ -15,8 +15,8 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vTDx</title>
-    <script type="module" crossorigin src="/vTDx/assets/index.064ebb36.js"></script>
-    <link rel="stylesheet" href="/vTDx/assets/index.77cf97bc.css">
+    <script type="module" crossorigin src="/vTDx/assets/index.66ff0b96.js"></script>
+    <link rel="stylesheet" href="/vTDx/assets/index.750d1a4c.css">
   </head>
 
   <body class="sidebar-collapsed">
@@ -42,7 +42,7 @@
           <h1 class="bold big nomargin">
             <span class="blue">v</span>TD<span class="gray">x</span>
           </h1>
-          <p class="nomargin gray">The right way to store notes.</p>
+          <p class="nomargin gray margin-bottom-20px">The right way to store notes.</p>
           <br />
         </div>
       </div>
