Add vTDx to nav

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <span class="material-icons">info</span>
             <span class="header-bar-button-descr">ABOUT</span>
         </button>
+        <button onclick="window.location.href = '/vTDx/';">
+            <span class="material-icons">description</span>
+            <span class="header-bar-button-descr">vTDx</span>
+        </button>
         <button onclick="switchPage('page/arcos.html',this);">
             <img src="./img/arcos.svg" height="30px" style="vertical-align: middle;">
             <span class="header-bar-button-descr">ARCOS</span>
