Upload new vTDx

--- a/vTDx/index.html
+++ b/vTDx/index.html
@@ -5,18 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vTDx/assets/favicon.17e50649.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vTDx</title>
-    <script type="module" crossorigin src="/vTDx/assets/index.dba8555f.js"></script>
-    <link rel="stylesheet" href="/vTDx/assets/index.9f97b1c1.css">
+    <script type="module" crossorigin src="/vTDx/assets/index.494c48e2.js"></script>
+    <link rel="stylesheet" href="/vTDx/assets/index.009eaea2.css">
   </head>
 
   <body class="sidebar-collapsed">
@@ -34,6 +26,7 @@
           <span id="page-disp">page</span>
           <span id="page-dot">●</span>
         </h3>
+        <span id="pages"></span>
       </div>
     </div>
     <div class="content" id="target">
@@ -52,7 +45,12 @@
       <div id="page-error" class="page error"></div>
       <div id="page-unftasks" class="page hidden"></div>
       <div id="page-fintasks" class="page hidden"></div>
-      <div id="page-themeselector" class="page hidden"></div>
+      <div id="page-themeselector" class="page hidden">
+        <h3>Dark Themes</h3>
+        <span id="darkmode"></span>
+        <h3>Light Themes</h3>
+        <span id="lightmode"></span>
+      </div>
     </div>
     
   </body>
