Upload new vTDx

--- a/vTDx/index.html
+++ b/vTDx/index.html
@@ -7,8 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vTDx</title>
-    <script type="module" crossorigin src="/vTDx/assets/index.494c48e2.js"></script>
-    <link rel="stylesheet" href="/vTDx/assets/index.009eaea2.css">
+    <script type="module" crossorigin src="/vTDx/assets/index.4b8c13d7.js"></script>
+    <link rel="modulepreload" href="/vTDx/assets/vendor.ba44c0d1.js">
+    <link rel="stylesheet" href="/vTDx/assets/index.000376ff.css">
   </head>
 
   <body class="sidebar-collapsed">
