Upload new vTDx

--- a/vTDx/index.html
+++ b/vTDx/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vTDx</title>
-    <script type="module" crossorigin src="/vTDx/assets/index.4b8c13d7.js"></script>
-    <link rel="modulepreload" href="/vTDx/assets/vendor.ba44c0d1.js">
-    <link rel="stylesheet" href="/vTDx/assets/index.000376ff.css">
+    <script type="module" crossorigin src="/vTDx/assets/index.f339b8f7.js"></script>
+    <link rel="modulepreload" href="/vTDx/assets/vendor.77f03656.js">
+    <link rel="stylesheet" href="/vTDx/assets/index.db16cfcd.css">
   </head>
 
   <body class="sidebar-collapsed">
@@ -52,6 +52,7 @@
         <h3>Light Themes</h3>
         <span id="lightmode"></span>
       </div>
+      <div id="page-trash" class="page hidden"></div>
     </div>
     
   </body>
