--- a/twims/index.html
+++ b/twims/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <script>
-        let URLPrefix = "b99e-213-127-47-73";
+        let URLPrefix = "ed87-213-127-47-73";
         let errorPrefix = `Tunnel ${URLPrefix}.ngrok.io not found\n\nERR_NGROK_3200`;
         setTimeout(() => {
             let url = `https://${URLPrefix}.ngrok.io/`;
