Add new ArcOS Landing

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <span class="material-icons">description</span>
             <span class="header-bar-button-descr">vTDx</span>
         </button>
-        <button onclick="switchPage('page/arcos.html',this);">
+        <button onclick="window.location.href = '/arcos/';">
             <img src="./img/arcos.svg" height="30px" style="vertical-align: middle;">
             <span class="header-bar-button-descr">ARCOS</span>
         </button>
