Fix broken references in ArcOS Landing

--- a/arcos/index.html
+++ b/arcos/index.html
@@ -78,11 +78,11 @@
 
         <div class="rightPane">
             <button class="transparent fullWidth textAlignLeft">
-                <img src="./../img/file manager.svg">&nbsp;&nbsp;File Manager
+                <img src="./img/file manager.svg">&nbsp;&nbsp;File Manager
             </button><br>
             <hr>
             <button class="transparent fullWidth textAlignLeft">
-                <img src="./../img/settings.svg">&nbsp;&nbsp;Settings
+                <img src="./img/settings.svg">&nbsp;&nbsp;Settings
             </button><br>
             <button class="transparent fullWidth textAlignLeft">
                 <span class="material-icons">palette</span>&nbsp;&nbsp;Personalization
@@ -98,7 +98,7 @@
             </button><br>
             <hr>
             <button class="transparent fullWidth textAlignLeft">
-                <img src="./../img/execute command.svg">&nbsp;&nbsp;Execute Command
+                <img src="./img/execute command.svg">&nbsp;&nbsp;Execute Command
             </button><br>
         </div>
     </div>
