--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="material-icons">info</span>
             <span class="header-bar-button-descr">ABOUT</span>
         </button>
-        <button onclick="window.location.href = '/vTDx/';">
+        <button onclick="window.location.href = 'https://vtdx.github.io/';">
             <span class="material-icons">description</span>
             <span class="header-bar-button-descr">vTDx</span>
         </button>
